--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="scss/css/style.css">
   <link rel="shortcut icon" href="./assets/img/resume.png" type="image/x-icon">
   <script src="https://kit.fontawesome.com/0c654557a8.js" crossorigin="anonymous"></script>
   <title>Resume</title>
@@ -79,7 +79,8 @@
               <ul class="recentWorks__list">
                 <li class="recentWorks__item"><a href="https://hello3world.github.io/plants/"
                     class="recentWorks__link">Plants</a></li>
-                <li class="recentWorks__item"><a href="#" class="recentWorks__link">Momentum</a></li>
+                <li class="recentWorks__item"><a href="https://hello3world-momentum.netlify.app/"
+                    class="recentWorks__link">Momentum</a></li>
                 <li class="recentWorks__item"><a href="#" class="recentWorks__link">Vilocity</a></li>
               </ul>
             </section>
@@ -88,18 +89,23 @@
               <h3 class="language__title">Language</h3>
               <ul class="language__list">
                 <li class="language__item">Russion - native</li>
-                <li class="language__item">English - A2 (in process)</li>
+                <li class="language__item">English - A2 (in process...)</li>
               </ul>
             </section>
           </div>
           <div class="main__biografy">
             <section class="aboutMe">
               <h2 class="aboutMe__title">About Me</h2>
-              <p class="aboutMe__text">I have experience in developing school projects. My immediate plans include
-                learning the React framework. My goal in professional development is to reach the senior level.
-                In my current job, I often have to take the initiative, acting alone, but in the future I would prefer
-                to work in a team with clear instructions. In dealing with people, I value respect for personal
-                boundaries and a sense of humor.</p>
+              <p class="aboutMe__text">I have experience in the development of educational projects using the
+                technologies indicated in the skillset section. Currently, I systematically improve my skills on new
+                educational projects. In the short term of my development, I plan to learn the React framework. In the
+                future, I see myself as a fullstack developer with node.js for backend.</p>
+              <p class="aboutMe__text">Development has attracted me all my adult life with the opportunity to create
+                complex, unique things and things that are useful to people. Now I have fully devoted myself to this
+                matter in order to change my professional activity as soon as possible.</p>
+              <p class="aboutMe__text">In my current job, I often have to take the initiative by following implicit
+                orders. In the future, I would prefer to work in a team with clearer instructions. In dealing with
+                people, I value respect for personal boundaries and a sense of humor.</p>
               <div class="indent">
                 <div class="indent__rectangle"></div>
               </div>
@@ -111,13 +117,13 @@
                   <h3 class="experience__job">Front-End Developer — RS School</h3>
                   <div class="experience__date">Dec. 2022 - till now</div>
                 </div>
-                <p class="experience__desc">Describe your responsibilities. Tum dicere exorsus est cur verear,
+                <!--   <p class="experience__desc">Describe your responsibilities. Tum dicere exorsus est cur verear,
                   ne ad id omnia referri oporteat,
                   ipsum per se ipsam voluptatem,
                   quia consequuntur magni dolores eos,
                   qui blanditiis praesentium voluptatum deleniti atque insitam in ea quid est eligendi optio,
                   cumque nihil ut ipsi auctori huius disciplinae placet: constituam,
-                  quid.</p>
+                  quid.</p> -->
               </div>
             </section>
             <section class="education">
@@ -153,7 +159,7 @@
               </div>
               <h2 class="code__title">Code Example</h2>
               <p class="code__text">
-              <pre><code class="code__content">const canvas=document.querySelector("canvas"),
+              <pre><code class="code__content"><details><summary>More</summary>const canvas=document.querySelector("canvas"),
 canvasContext=canvas.getContext("2d"),
 widthCanwas=(canvas.width=window.innerWidth),
 heightCanvas=(canvas.height=window.innerHeight);
@@ -161,8 +167,8 @@ const str="10011010101011101101010111000001110101100101",
 matrix=str.split("");
 col=widthCanwas / font,
 arr=[];
-<details><summary>More</summary>let font=30,
-for (let i=0; i < col; i++) arr[i]=1;
+let font=30,
+for (let i=0; i &lt; col; i++) arr[i]=1;
 
 function draw() {
   canvasContext.fillStyle="rgba(0,0,0,.05)";
@@ -170,7 +176,7 @@ function draw() {
   canvasContext.fillStyle="#0f0";
   canvasContext.font=font+"px system-ui";
 
-  for (let i=0; i < arr.length; i++) {
+  for (let i=0; i &lt; arr.length; i++) {
     let txt=matrix[Math.floor(Math.random() * matrix.length)];
     canvasContext.fillText(txt, i * font, arr[i] * font);
     if (arr[i] * font > heightCanvas && Math.random() > 0.975) arr[i]=0;
