refactor: change path to img

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="scss/css/style.css">
-  <link rel="shortcut icon" href="./assets/img/resume.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/img/resume.png" type="image/x-icon">
   <script src="https://kit.fontawesome.com/0c654557a8.js" crossorigin="anonymous"></script>
   <title>Resume</title>
 </head>
@@ -22,10 +22,10 @@
             <nav class="nav">
               <ul class="socialList header__socialList">
                 <li class="socialList__item"><a href="https://github.com/hello3world" target="_blank"
-                    class="socialList__link"><img src="/assets/img/social/github.svg" alt="github"
+                    class="socialList__link"><img src="assets/img/social/github.svg" alt="github"
                       class="socialList__img"></a></li>
                 <li class="socialList__item"><a href="https://discord.gg/sJtjZdVt" target="_blank"
-                    class="socialList__link"><img src="/assets/img/social/discord.svg" alt="discord"
+                    class="socialList__link"><img src="assets/img/social/discord.svg" alt="discord"
                       class="socialList__img"></a></li>
               </ul>
             </nav><button class="contacts__close-btn"><i class="fas fa-times"></i></button>
@@ -35,7 +35,7 @@
               <div class="ball"></div>
             </label></div>
         </div>
-        <div class="header__content"><img src="/assets/img/avatar.png" alt="avatar" class="header__avatar">
+        <div class="header__content"><img src="assets/img/avatar.png" alt="avatar" class="header__avatar">
           <div class="header__info">
             <h3 class="header__job">Frontend developer</h3>
             <h1 class="header__name">Yauheni Paulovich</h1><a href="#" class="header__btn">Contact Me</a>
@@ -202,24 +202,24 @@ setInterval(draw, 55);
               <!--               <li class="socialList__item"><a href="#" class="socialList__link"><img
                     src="/assets/img/social/facebook.svg" alt="facebook" class="socialList__img"></a></li> -->
               <li class="socialList__item"><a href="https://github.com/hello3world" target="_blank"
-                  class="socialList__link"><img src="/assets/img/social/github.svg" alt="github"
+                  class="socialList__link"><img src="assets/img/social/github.svg" alt="github"
                     class="socialList__img"></a></li>
               <!--    <li class="socialList__item"><a href="#" class="socialList__link"><img
                     src="/assets/img/social/linkedin.svg" alt="linkedin" class="socialList__img"></a></li> -->
               <li class="socialList__item"><a href="https://discord.gg/sJtjZdVt" target="_blank"
-                  class="socialList__link"><img src="/assets/img/social/discord.svg" alt="discord"
+                  class="socialList__link"><img src="assets/img/social/discord.svg" alt="discord"
                     class="socialList__img"></a></li>
               <li class="socialList__item"><a href="https://rs.school/js/" target="_blank" class="socialList__link"><img
-                    height="26px" src="./assets/img/rs_school.svg" alt="rs_school" class="socialList__img"></a></li>
+                    height="26px" src="assets/img/rs_school.svg" alt="rs_school" class="socialList__img"></a></li>
             </ul>
           </nav>
         </div>
       </div>
     </footer>
   </div>
-  <script src="/js/changeTheme.js"></script>
-  <script src="/js/social-Icons.js"></script>
-  <script src="/js/canvas.js"></script>
+  <script src="js/changeTheme.js"></script>
+  <script src="js/social-Icons.js"></script>
+  <script src="js/canvas.js"></script>
 </body>
 
 </html>
