feat (layout): add responsive layout for header and main

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="body__canvas"><canvas class="canvas" id="c"></canvas><a href="#" class="body-btn">BACK</a></div>
+  <!-- <div class="body__canvas"><canvas class="canvas" id="c"></canvas><a href="#" class="body-btn">BACK</a></div> -->
   <div class='body__content'>
     <header class="header">
       <div class="container header--bg">
@@ -38,7 +38,7 @@
         <div class="header__content"><img src="assets/img/avatar.png" alt="avatar" class="header__avatar">
           <div class="header__info">
             <h3 class="header__job">Frontend developer</h3>
-            <h1 class="header__name">Yauheni Paulovich</h1><a href="#" class="header__btn">Contact Me</a>
+            <h1 class="header__name">Yauheni<br> Paulovich</h1><a href="#" class="header__btn">Contact Me</a>
           </div>
         </div>
       </div>
@@ -51,9 +51,8 @@
               <h3 class="skillset__title">Skillset</h3>
               <ul class="skillset__list">
                 <li class="skillset__item">JAVA SCRIPT</li>
-                <li class="skillset__item">HTML</li>
-                <li class="skillset__item">SASS</li>
-                <li class="skillset__item">CSS</li>
+                <li class="skillset__item">HTML5</li>
+                <li class="skillset__item">CSS3 / SASS</li>
                 <li class="skillset__item">GIT</li>
               </ul>
             </section>
@@ -64,6 +63,9 @@
                     target="_blank">Certificate RS School. Stage 0 (java-script)</a></li>
                 <li class="awards__item"><a class="awards__link" target="_blank"
                     href="./assets/Recommendation letter.pdf">Recommendation letter QA Academy</a></li>
+                <li class="awards__item"><a class="awards__link" target="_blank"
+                    href="https://www.codewars.com/users/rsschool_faa9083f479463d6">Codewars profile</a>
+                </li>
               </ul>
             </section>
             <!--    <section class="careerTraits">
@@ -153,7 +155,7 @@
                 <div class="education__date">July 2015</div>
               </div>
             </section>
-            <section class="code">
+            <!-- <section class="code">
               <div class="indent indent--padBottom">
                 <div class="indent__rectangle"></div>
               </div>
@@ -187,7 +189,7 @@ function draw() {
 setInterval(draw, 55);
 </details><a href="#"class="code__btn">Run code</a></code></pre>
               </p>
-            </section>
+            </section> -->
           </div>
         </div>
       </div>
